# snapshotter-lite-v2

./: .gitignore  Dockerfile  README.md  _override_defaults.sh  bootstrap.sh  build-dev.sh  build-docker.sh  build.sh  build.sh-1m  check_simulation.sh  clean_envs.sh  collector_test.sh  configure-environment.sh  deploy-services.sh  diagnose.sh  docker-compose-dev.yaml  docker-compose-no-collector.yaml  docker-compose.yaml  docker-entrypoint.sh  env.example  get_chat_id.py  init.sh  init_docker.sh  monitoring.sh  pm2.config.js  pyproject.toml  requirements.txt  snapshotter_autofill.sh
.github/workflows/: docker-publish.yml
config/: projects.example.json  settings.example.json
powerloom_rewards_staking/: claimrestake.py  env.example  readme.md  requirements.txt  restake.sh  restake.txt
snapshotter/: core_api.py  processor_distributor.py  snapshotter_id_ping.py  system_event_detector.py
snapshotter/modules/computes/: .gitignore  pair_total_reserves.py  pyproject.toml  trade_volume.py
snapshotter/modules/computes/settings/: settings.json  settings_model.py
snapshotter/modules/computes/tests/: liquidity_test.py  (+1 more)
snapshotter/settings/: config.py
snapshotter/static/abis/: DataMarketInterface.json  ProtocolContract.json  ProtocolLogicContract.json
snapshotter/tests/: test_docker_subnets.py  test_tg_reporting_service.py  test_web3_async_provider.py
snapshotter/utils/: callback_helpers.py  data_utils.py  generic_worker.py  rpc.py  snapshot_utils.py  snapshot_worker.py
snapshotter/utils/models/: data_models.py  message_models.py  settings_model.py
(+9 files in other folders)
